src/cli/snapshots/nglimit__cli__monitor__tests__tui_snapshot_compact_preset.snap
---
source: src/cli/monitor.rs
expression: output
---
┌──────────────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
                                                                                
 ┌ 5h | warning ──────────────────────────────────────────────────────────────┐ 
 └────────────────────────────────────────────────────────────────────────────┘ 
 cr 39/50 (78%)                                                                 
                                                                                
                                                                                
 ┌ 24h | ok ──────────────────────────────────────────────────────────────────┐ 
 cr 91/180 (51%)                                                                
                                                                                
                                                                                
 ┌ 7d | ok ───────────────────────────────────────────────────────────────────┐ 
 └────────────────────────────────────────────────────────────────────────────┘ 
 cr 214/600 (36%)                                                               
                                                                                
                                                                                
 ┌ 30d | ok ──────────────────────────────────────────────────────────────────┐ 
 cr 819/2,0K (41%)                                                              
                                                                                
┌ alerts ──────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ agents ──────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
q quit | r refresh | 5s/3s
