src/cli/snapshots/nglimit__cli__monitor__tests__tui_snapshot_waiting.snap
---
source: src/cli/monitor.rs
expression: output
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ NeuroGate v0.5.0 | waiting for data...                                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Limits────────────────────────────────────────────────────────────────────────────────────────────┐
│Collecting NeuroGate status...                                                                    │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ alerts ──────────────────────────────────────────────────────────────────────────────────────────┐
│waiting for data                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ q quit   r refresh  auto 5s  next 3s                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
